@@ -31,7 +31,7 @@ Region: "HThad_4j2b"; "HThad_5j2b"; "HThad_ge6j2b"
   Label: "4 j, 2 b"; "5 j, 2 b"; "#geq 6 j, 2 b"
   ShortLabel: "4j,2b"; "5j,2b"; "#geq6j,2b"
   NtuplePathSuff: "4j2b"; "5j2b"; "ge6j2b"
-  Binning: 100,150,200,250,300,350,400,450,500,550,600,650,700,800,1000,1600
+  Binning: 100,150,200,250,300,350,400,450,500,550,600,650,700,800,1000,1600;100,150,200,250,300,350,400,450,500,550,600,650,700,800,1000,1600;150,200,250,300,350,400,450,500,550,600,650,700,800,1000,1600
   BinWidth: 50
   
 Region: "HThad_4j3b"; "HThad_5j3b"; "HThad_ge6j3b"
